<resources>
    <string name="app_name">tut2</string>
    <string name="heading">Guess and win</string>
    <string name="Question">Select the image for dog breed</string>
    <string name="submit_btn">SUBMIT</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="number_of_correct_answers">Number of correct answers</string>
    <string name="number_of_wrong_answers">Number of wrong Answers</string>
    <string name="finish">finish</string>
    <string name="todo">TODO</string>
</resources>